--- a/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_serviceaccount_key.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_serviceaccount_key.yml
@@ -1,6 +1,6 @@
 - name: Generate service account certificate and key
-  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.pem -ca-key={{ role_path }}/files/ca-key.pem -config={{ ca_config }} -profile={{ ca_profile }} {{ service_account_csr }} | {{ cfssljson_binary }} -bare service-account"
+  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.crt -ca-key={{ role_path }}/files/ca.key -config={{ ca_config }} -profile={{ ca_profile }} {{ service_account_csr }} | {{ cfssljson_binary }} -bare service-account"
   args:
     chdir: "{{ role_path }}/files"
-    creates: "{{ role_path }}/files/service-account.pem"
+    creates: "{{ role_path }}/files/sa.pub"
   when: not ansible_check_mode
