--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/meta/main.yml
@@ -1,4 +1,1 @@
-dependencies:
-  - {role: common, tags: ["common"]}
-  - {role: control-plane, tags: ["control-plane"]}
-  - {role: networking, tags: ["networking"]}
+dependencies: []
