--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/configure_rbac.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/configure_rbac.yml
@@ -10,6 +10,6 @@
 
 - name: Apply RBAC policy
   ansible.builtin.command:
-    cmd: "{{ kubectl_binary_dest }} apply -f {{ rbac_config }}"
+    cmd: "{{ kubectl_binary}} apply -f {{ rbac_config }}"
   changed_when: true
   when: inventory_hostname == 'master1'
