--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/remove_bootstrap.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/remove_bootstrap.yml
@@ -1,5 +1,5 @@
 - name: Remove bootstrap token secret
   ansible.builtin.command:
-    cmd: "{{ kubectl_binary_dest }} -n kube-system delete secret bootstrap-token-{{ bootstrap_token_id }}"
+    cmd: "{{ kubectl_binary}} -n kube-system delete secret bootstrap-token-{{ bootstrap_token_id }}"
   changed_when: true
   when: inventory_hostname == 'master1'
