--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/masters.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/masters.yml
@@ -4,10 +4,10 @@ kube_apiserver_port: "{{ api_server_port }}"
 kube_apiserver_args:
   - --etcd-servers=https://192.168.56.11:2379
   - --client-ca-file={{ pki_dir }}/ca.crt
-  - --service-account-key-file={{ pki_dir }}/service-account.pem
-  - --service-account-private-key-file={{ pki_dir }}/service-account-key.pem
-  - --tls-cert-file={{ pki_dir }}/kubernetes.pem
-  - --tls-private-key-file={{ pki_dir }}/kubernetes-key.pem
+  - --service-account-key-file={{ pki_dir }}/sa.pub
+  - --service-account-signing-key-file={{ pki_dir }}/sa.key
+  - --tls-cert-file={{ pki_dir }}/apiserver.crt
+  - --tls-private-key-file={{ pki_dir }}/apiserver.key
   - --service-cluster-ip-range={{ service_cidr }}
   - --encryption-provider-config={{ config_dir }}/encryption-config.yaml
 
