--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
@@ -1,4 +1,1 @@
-dependencies:
-  - {role: jumpbox_setup, tags: ["jumpbox_setup"]}
-  - {role: common, tags: ["common"]}
-  - {role: control-plane, tags: ["control-plane"]}
+dependencies: []
