--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/configure_bootstrap.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/configure_bootstrap.yml
@@ -1,6 +1,6 @@
 - name: Create bootstrap token
   ansible.builtin.command:
-    cmd: "{{ kubectl_binary_dest }} -n kube-system create secret generic bootstrap-token-{{ bootstrap_token_id }} --type=bootstrap.kubernetes.io/token --metadata=namespace:kube-system --from-literal=token-id={{ bootstrap_token_id }} --from-literal=token-secret={{ bootstrap_token_secret }} --from-literal=usage-bootstrap-authentication=true --from-literal=usage-bootstrap-signing=true"
+    cmd: "{{ kubectl_binary}} -n kube-system create secret generic bootstrap-token-{{ bootstrap_token_id }} --type=bootstrap.kubernetes.io/token --metadata=namespace:kube-system --from-literal=token-id={{ bootstrap_token_id }} --from-literal=token-secret={{ bootstrap_token_secret }} --from-literal=usage-bootstrap-authentication=true --from-literal=usage-bootstrap-signing=true"
   changed_when: true
   when: inventory_hostname == 'master1'
 
@@ -15,8 +15,8 @@
 
 - name: Approve CSRs
   ansible.builtin.command:
-    cmd: "{{ kubectl_binary_dest }} certificate approve {{ item }}"
+    cmd: "{{ kubectl_binary}} certificate approve {{ item }}"
   loop: "{{ q('kubernetes.core.k8s', api_version='certificates.k8s.io/v1', kind='CertificateSigningRequest') | json_query('[].metadata.name') }}"
   changed_when: true
   when: inventory_hostname == 'master1'
-  notify: Approve CSRs
+  notify: approve_csrs
