--- a/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/defaults/main.yml
@@ -11,22 +11,22 @@ etcd_csr: "{{ role_path }}/files/etcd-csr.json"
 service_account_csr: "{{ role_path }}/files/service-account-csr.json"
 
 # Certificate output paths
-ca_pem: "{{ pki_dir }}/ca.pem"
-ca_key_pem: "{{ pki_dir }}/ca-key.pem"
-kubernetes_pem: "{{ pki_dir }}/kubernetes.pem"
-kubernetes_key_pem: "{{ pki_dir }}/kubernetes-key.pem"
-admin_pem: "{{ pki_dir }}/admin.pem"
-admin_key_pem: "{{ pki_dir }}/admin-key.pem"
-kube_controller_manager_pem: "{{ pki_dir }}/kube-controller-manager.pem"
-kube_controller_manager_key_pem: "{{ pki_dir }}/kube-controller-manager-key.pem"
-kube_scheduler_pem: "{{ pki_dir }}/kube-scheduler.pem"
-kube_scheduler_key_pem: "{{ pki_dir }}/kube-scheduler-key.pem"
-kubelet_pem: "{{ pki_dir }}/{{ kubelet_cert_file }}"
-kubelet_key_pem: "{{ pki_dir }}/{{ kubelet_key_file }}"
-etcd_pem: "{{ etcd_cert_dir }}/etcd.pem"
-etcd_key_pem: "{{ etcd_cert_dir }}/etcd-key.pem"
-service_account_pem: "{{ pki_dir }}/service-account.pem"
-service_account_key_pem: "{{ pki_dir }}/service-account-key.pem"
+ca_pem: "{{ role_path }}/files/ca.crt" 
+ca_key_pem: "{{ role_path }}/files/ca.key"
+kubernetes_pem: "{{ role_path }}/files/apiserver.crt"
+kubernetes_key_pem: "{{ role_path }}/files/apiserver.key"
+admin_pem: "{{ role_path }}/files/admin.crt"
+admin_key_pem: "{{ role_path }}/files/admin.key"
+kube_controller_manager_pem: "{{ role_path }}/files/kube-controller-manager.crt"
+kube_controller_manager_key_pem: "{{ role_path }}/files/kube-controller-manager.key"
+kube_scheduler_pem: "{{ role_path }}/files/kube-scheduler.crt"
+kube_scheduler_key_pem: "{{ role_path }}/files/kube-scheduler.key"
+kubelet_pem: "{{ role_path }}/files/kubelet.crt"
+kubelet_key_pem: "{{ role_path }}/files/kubelet.key"
+etcd_pem: "{{ role_path }}/files/etcd-server.crt"
+etcd_key_pem: "{{ role_path }}/files/etcd-server.key"
+service_account_pem: "{{ role_path }}/files/sa.pub"
+service_account_key_pem: "{{ role_path }}/files/sa.key"
 
 # CFSSL settings
 cfssl_binary: "{{ cfssl_binary }}"
