--- a/k8s-installation/vagrant-ansible/ansible/roles/common/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/common/handlers/main.yml
@@ -2,3 +2,8 @@
   ansible.builtin.command:
     cmd: sysctl --system
   changed_when: true
+
+- name: Restart chrony
+  ansible.builtin.systemd:
+    name: chrony
+    state: restarted
