--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/etcd.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/etcd.yml
@@ -2,12 +2,12 @@ etcd_args:
   - --name={{ inventory_hostname }}
   - --data-dir={{ etcd_data_dir }}
   - --client-cert-auth=true
-  - --cert-file={{ etcd_cert_dir }}/etcd-server.crt
-  - --key-file={{ etcd_cert_dir }}/etcd-server.key
-  - --trusted-ca-file={{ pki_dir }}/ca.crt
-  - --peer-cert-file={{ etcd_cert_dir }}/etcd-server.crt
-  - --peer-key-file={{ etcd_cert_dir }}/etcd-server.key
-  - --peer-trusted-ca-file={{ pki_dir }}/ca.crt
+  - --cert-file={{ etcd_cert_dir }}/etcd-server.pem
+  - --key-file={{ etcd_cert_dir }}/etcd-server-key.pem
+  - --trusted-ca-file={{ pki_dir }}/ca.pem
+  - --peer-cert-file={{ etcd_cert_dir }}/etcd-server.pem
+  - --peer-key-file={{ etcd_cert_dir }}/etcd-server-key.pem
+  - --peer-trusted-ca-file={{ pki_dir }}/ca.pem
   - --initial-cluster=master1=https://192.168.56.11:2380
   - --initial-cluster-state=new
   - --listen-client-urls=https://0.0.0.0:2379
