--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/masters.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/masters.yml
@@ -3,19 +3,19 @@ kube_apiserver_bind_address: 0.0.0.0
 kube_apiserver_port: "{{ api_server_port }}"
 kube_apiserver_args:
   - --etcd-servers=https://192.168.56.11:2379
-  - --client-ca-file={{ pki_dir }}/ca.crt
+  - --client-ca-file={{ pki_dir }}/ca.pem
   - --service-account-key-file={{ pki_dir }}/sa.pub
-  - --service-account-signing-key-file={{ pki_dir }}/sa.key
-  - --tls-cert-file={{ pki_dir }}/apiserver.crt
-  - --tls-private-key-file={{ pki_dir }}/apiserver.key
+  - --service-account-signing-key-file={{ pki_dir }}/sa-key.pem
+  - --tls-cert-file={{ pki_dir }}/apiserver.pem
+  - --tls-private-key-file={{ pki_dir }}/apiserver-key.pem
   - --service-cluster-ip-range={{ service_cidr }}
   - --encryption-provider-config={{ config_dir }}/encryption-config.yaml
 
 kube_controller_manager_args:
-  - --cluster-signing-cert-file={{ pki_dir }}/ca.crt
-  - --cluster-signing-key-file={{ pki_dir }}/ca.key
-  - --service-account-private-key-file={{ pki_dir }}/sa.key
-  - --root-ca-file={{ pki_dir }}/ca.crt
+  - --cluster-signing-cert-file={{ pki_dir }}/ca.pem
+  - --cluster-signing-key-file={{ pki_dir }}/ca-key.pem
+  - --service-account-private-key-file={{ pki_dir }}/sa-key.pem
+  - --root-ca-file={{ pki_dir }}/ca.pem
 
 kube_scheduler_args:
   - --authentication-kubeconfig={{ config_dir }}/kube-scheduler.kubeconfig
