--- a/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_kube_proxy_certs.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_kube_proxy_certs.yml
@@ -1,6 +1,6 @@
 - name: Generate kube-proxy certificate and key
-  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.crt -ca-key={{ role_path }}/files/ca.key -config={{ ca_config }} -profile={{ ca_profile }} {{ role_path }}/files/kube-proxy-csr.json | {{ cfssljson_binary }} -bare kube-proxy"
+  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.pem -ca-key={{ role_path }}/files/ca-key.pem -config={{ ca_config }} -profile={{ ca_profile }} {{ role_path }}/files/kube-proxy-csr.json | {{ cfssljson_binary }} -bare kube-proxy"
   args:
     chdir: "{{ role_path }}/files"
-    creates: "{{ role_path }}/files/kube-proxy.crt"
+    creates: "{{ role_path }}/files/kube-proxy.pem"
   when: not ansible_check_mode
