--- a/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_service_account_key.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_service_account_key.yml
@@ -1,5 +1,12 @@
-- name: Generate service account key pair
-  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.crt -ca-key={{ role_path }}/files/ca.key -config={{ ca_config }} -profile={{ ca_profile }} {{ service_account_csr }} | {{ cfssljson_binary }} -bare sa"
+- name: Generate service account private key and CSR
+  ansible.builtin.shell: "{{ cfssl_binary }} genkey {{ service_account_csr }} | {{ cfssljson_binary }} -bare sa"
+  args:
+    chdir: "{{ role_path }}/files"
+    creates: "{{ role_path }}/files/sa-key.pem"
+  when: not ansible_check_mode
+
+- name: Extract service account public key from private key
+  ansible.builtin.shell: "openssl rsa -in sa-key.pem -pubout -out sa.pub"
   args:
     chdir: "{{ role_path }}/files"
     creates: "{{ role_path }}/files/sa.pub"
